--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -1,1 +1,1 @@
-{"welcome": "Bienvenue à Suq Alfalah", "store": "Magasin", "products": "Produits", "register_store": "Enregistrer un magasin"}
+{ "welcome": "Bienvenue au Marché Al-Falah" }
