--- a/frontend/src/locales/ar/translation.json
+++ b/frontend/src/locales/ar/translation.json
@@ -1,1 +1,1 @@
-{"welcome": "مرحبا بك في سوق الفلاح", "store": "متجر", "products": "المنتجات", "register_store": "تسجيل متجر"}
+{ "welcome": "مرحبا بك في سوق الفلاح" }
